--- a/signup.html
+++ b/signup.html
@@ -150,13 +150,13 @@
                 let data_email = document.forms['dua']['email'].value;
 
                 if (data_user.trim() === "") {
-                    alert("Nama Tidak Boleh Kosong ... !!!");
+                    alert("Username Tidak Boleh Kosong ... !!!");
                 } else if (data_email.trim() === "") {
                     alert("Email Tidak Boleh Kosong ... !!!");
                 } else if (data_password.trim() === "") {
                     alert("Password Tidak Boleh Kosong ... !!!");
                 } else {
-                    window.location.href = "homepage.html";
+                    window.location.href = "index.html";
                 }
             });
         </script>
