--- a/SERENITY.html
+++ b/SERENITY.html
@@ -225,11 +225,11 @@
             let data_password = document.forms['awal']['password'].value;
             
             if (data_user.trim() === "") {
-                alert("Nama Tidak Boleh Kosong ... !!!");
+                alert("Username Tidak Boleh Kosong ... !!!");
             } else if (data_password.trim() === "") {
                 alert("Password Tidak Boleh Kosong ... !!!");
             } else {
-                window.location.href = "homepage.html";
+                window.location.href = "index.html";
             }
         });
     </script>
