--- a/comment.html
+++ b/comment.html
@@ -439,7 +439,7 @@
     </div>
 
     <div class="post come-melt">
-        <img src="/gambargirl1.jpeg" alt="user">
+        <img src="/gambar/girl1.jpeg" alt="user">
         <div class="user">Barbie - <span>7j</span></div>
         <div class="text">Rekomendasikan Psikolog yang paling baik dan ganteng</div>
         <div class="stats">
