--- a/signup.html
+++ b/signup.html
@@ -156,7 +156,7 @@
                 } else if (data_password.trim() === "") {
                     alert("Password Tidak Boleh Kosong ... !!!");
                 } else {
-                    window.location.href = "index.html";
+                    window.location.href = "homepage.html";
                 }
             });
         </script>
