--- a/profil.html
+++ b/profil.html
@@ -207,14 +207,14 @@
 
 <div class="header">
     <div class="header-left">
-        <a href="index.html"><img src="gambar/logo-removebg-preview.png"></a>
+        <a href="homepage.html"><img src="gambar/logo-removebg-preview.png"></a>
         <h1>Serenity</h1>
     </div>
     <div class="nav">
         <a href="comment.html">Connect with Others</a>
         <a href="tanya.html">Expert Assistance</a>
         <a href="didengar.html">Chat Stranger</a>
-        <a href="http://127.0.0.1:5500/mental-test.html">Mental Check</a>
+        <a href="mental-test.html">Mental Check</a>
         <div class="profile">
             <a href="profil.html"><img src="gambar/bebek.png" alt="profile"></a>
         </div>
@@ -243,7 +243,7 @@
         <button class="btn-payment">Payment</button>
         <button class="btn-favorite">Favorite</button>
         <a href="forgotpass.html"><button class="btn-reset">Reset Password</button></a>
-        <a href="SERENITY.html"><button class="btn-logout">Log Out</button></a>
+        <a href="index.html"><button class="btn-logout">Log Out</button></a>
     </div>
 </div>
 
