--- a/didengar.html
+++ b/didengar.html
@@ -156,7 +156,7 @@
 <body>
     <div class="header">
         <div class="header-left">
-            <a href="index.html"><img src="gambar/logo-removebg-preview.png"></a>
+            <a href="homepage.html"><img src="gambar/logo-removebg-preview.png"></a>
             <h1>Serenity</h1>
         </div>
         <div class="nav">
