--- a/mystory.html
+++ b/mystory.html
@@ -367,11 +367,11 @@
         <div class="stats">
             <div class="info">
                 <div class="count">
-                    <img class="komen" src="https://via.placeholder.com/20" alt="comments">
+                    <img class="komen" src="gambar/logo komen.png" alt="comments">
                     <div>1</div>
                 </div>
                 <div class="count">
-                    <img class="lihat" src="https://via.placeholder.com/20" alt="views">
+                    <img class="lihat" src="gambar/logo views.png" alt="views">
                     <div>20</div>
                 </div>
             </div>
