--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             } else if (data_password.trim() === "") {
                 alert("Password Tidak Boleh Kosong ... !!!");
             } else {
-                window.location.href = "index.html";
+                window.location.href = "homepage.html";
             }
         });
     </script>
